--- a/index.html
+++ b/index.html
@@ -4,41 +4,38 @@
     <title>Contact Form</title>
 </head>
 <body>
-    <form id="contact-form" method="post">
+    <form id="contact-form">
         <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
-        <br>
+        <input type="text" id="name" name="name" required><br>
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-        <br>
+        <input type="email" id="email" name="email" required><br>
         <label for="message">Message:</label>
-        <textarea id="message" name="message" required></textarea>
-        <br>
+        <textarea id="message" name="message" required></textarea><br>
         <button type="submit">Submit</button>
     </form>
-
+    
     <script>
-        document.getElementById('contact-form').addEventListener('submit', async function(event) {
-            event.preventDefault();
-
-            const formData = {
-                name: document.getElementById('name').value,
-                email: document.getElementById('email').value,
-                message: document.getElementById('message').value
-            };
-
-            const response = await fetch('https://cl4dhs3yg7.execute-api.us-east-1.amazonaws.com/dev', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(formData)
-            });
-
-            if (response.ok) {
-                alert('Message sent successfully!');
-            } else {
-                alert('Failed to send message.');
+        document.getElementById('contact-form').addEventListener('submit', async function(e) {
+            e.preventDefault();
+            const formData = new FormData(this);
+            const data = {};
+            formData.forEach((value, key) => data[key] = value);
+            try {
+                const response = await fetch('https://cl4dhs3yg7.execute-api.us-east-1.amazonaws.com/dev/contact', {
+                    method: 'POST',
+                    body: JSON.stringify(data),
+                    headers: {
+                        'Content-Type': 'application/json'
+                    }
+                });
+                if (response.ok) {
+                    alert('Message sent successfully!');
+                } else {
+                    alert('Failed to send message.');
+                }
+            } catch (error) {
+                console.error('Error:', error);
+                alert('An error occurred while sending the message.');
             }
         });
     </script>
